--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:generate",
-		"migration:run": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:run"
+		"migrate": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
