--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/home/node/app
+      - .:/home/node/app:z
     depends_on:
       - db
   
@@ -20,7 +20,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - .docker/postgres/dbdata:/var/lib/postgresql/data
+      - .docker/postgres/dbdata:/var/lib/postgresql/data:z
     environment:
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=nestjslessons
