--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:generate",
-		"migrate": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:run"
+    "migrate": "typeorm-ts-node-commonjs -d ./src/database/database.providers.ts migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -35,7 +35,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
